# climbing

./: .gitignore  AGENTS.md  CONTEXT.md  README.md  pyproject.toml  requirements.txt
config/: scoring_rules.yaml  settings.yaml  tickers.yaml
data/: 近一年资金明细.xls
data/user/: positions_example.csv  transactions_example.csv
docs/: architecture.md  handoff-imported.md  prd.md
docs/adr/: 0001-equity-researcher-as-research-engine.md  0002-trade-plan-agent-driven.md  0003-agent-first-daily-workflow.md  0004-data-source-hierarchy.md  0005-system-entry-and-human-agent-boundary.md
docs/data/: data_audit.csv  data_audit_report.md  data_verification_results.csv
docs/research/: climbing.md  deep-research-report.md
scripts/: daily_update.py  event_trigger.py  monthly_report.py
skills/capital-flow/: SKILL.md
skills/daily-review/: SKILL.md
skills/plan-review/: SKILL.md
skills/stock-research/: SKILL.md
skills/trade-plan/: SKILL.md
src/analysis/: __init__.py  market_temperature.py  plan_deviation.py  plan_state_machine.py  portfolio_returns.py  portfolio_risk.py  stock_scorer.py  valuation.py  (+1 more)
tests/: test_analysis.py  test_capital_flow.py  test_cli.py  test_common.py  test_equity_report.py  test_equity_report_adapter.py  test_market_data.py  test_plan_deviation.py  test_portfolio_fifo.py  test_portfolio_returns.py  test_research_cache.py  test_security_master.py  test_skill_runner.py  test_snapshot_io.py  test_snapshot_validator.py  test_trade_plan.py  test_transaction_loader.py
web/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
(+80 files in other folders)
